<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAddress"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white">

            <ImageView
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:src="@drawable/ic_info"
                android:layout_gravity="center_vertical"
                android:tint="@color/colorPrimary"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawableTint="@color/black"
                android:gravity="center"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRestaurant"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:src="@drawable/ic_aboutus"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"
                android:tint="@color/colorPrimary"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/restaurant"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawableTint="@color/black"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
